Add retries and timeout to SimpleHTTPClient
+ add tests for retry.